edit and delte books implemented